# metamodule

./: .ccls  .clang-format  .gitignore  .gitmodules  Makefile  README.md  Setup.md  compile_flags.txt  no-clangd  wavefold-tables.h
firmware/: .clangd  .gdbinit  BOOTROM.dis  BOOTROM.info  BOOTROM.thumb  CMakeLists.txt  CMakePresets.json  COLOR_SCHEME_MIGRATION.md  Dockerfile  MEMORY.md  Makefile  PI_artwork_120.c  PI_artwork_240.c  QCD_artwork_240.c  README.md  TODO  a7_symbols.yaml  bootrom-analyze.py  cmake-format.py  core0_lock_log  core1_lock_log  gui_malloc_log  helper.py  iirneon.s  iirneon_notes.s  main-syms  makefile_a7.mk  makefile_common.mk  makefile_component_images.mk  makefile_h7m4.mk  makefile_h7m7.mk  makefile_m4.mk  makefile_m7.mk  makefile_moduleinfo.mk  makefile_mp1a7.mk  makefile_mp1m4.mk  makefile_ne10.mk  makefile_opts.mk  map.info  plugin.cmake  (+5 more)
firmware-mp2/: CMakeLists.txt  CMakePresets.json  README.md
firmware-mp2/build-linux-gnu/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
firmware-mp2/cmake/: aarch64-none-elf-gcc.cmake  arch_mp25xa35.cmake  arch_mp25xm33.cmake
firmware-mp2/system/: mmu_ca35.cc  stm32mp2xx_ca35.ld
firmware/assets/: README  README.txt
firmware/bootloader/: bootrom-trace.txt
firmware/cmake/: CheckGit.cmake  aarch-linux-none-gnu.cmake  arch_mp15xa7.cmake  arch_mp15xm4.cmake  arch_mp2xxa35.cmake  arch_mp2xxm33.cmake  arm-none-eabi-gcc.cmake  brand_util.cmake  common.cmake  git_version.cpp.in  git_version.h  log_levels.cmake
firmware/coreproc_plugin/: CMakeLists.txt  async_thread.cc  async_thread_control.hh  block_resampler.cc  midi_message.cc
firmware/flashing/: a7.gdbinit  bin_to_ld.sh  binho.script  dd_fold.csv  dd_foldmax.csv  dump_syms.py  elf_to_uimg.py  flash-app-sd.sh  flash-t32.py  flash.tsv  flashing.cmake  format-partition-sdcard.sh  fsbl.stm32  jflash-bg.gdb  jflash.gdb  jlink.gdbinit  manifest_generator.py  metamodule.jdebug  mm-a7-t32.cmm  multi.gdb  openocd.gdbinit  program.jlink  stlink-dap.cfg  switch-to-m4.cmm  t32-qspi-flash.cmm  uimg_header.py  unmount.sh  zero-term.py
firmware/h7/: makefile_h7m4.mk
firmware/iirtest/: iirneon.cpp  make_neon
firmware/images/: fsbl.stm32
firmware/makefiles/: makefile_component_images.mk
firmware/metamodule-firmware/: metamodule.json
firmware/modules/: blank.hh  ramp-vco.cc  ramp-vco.hh  simple_vco.cc  simple_vco.hh
firmware/plugins/: Befaco  Befaco-plugin.cpp  Makefile
firmware/src/: CMakeLists.txt  audio-dualcodec.cc  audio-dualcodec.hh  audio.cc  audio.hh  audio_test_signals.hh  auxsignal.hh  calibration.hh  controls.cc  controls.hh  debug.hh  dev_version.hh  fileio.cc  fileio.hh  fileio_t.hh  fusb302.hh  fusb302_registers.hh  inter_core_comm.hh  inter_core_comm_msg.hh  ld.h  lvgl_driver.hh  muxed_adc.hh  norfs.cc  norfs.hh  param_cache.hh  params.hh  params_dbg_print.hh  patch_file.hh  patch_fileio.cc  patch_fileio.hh  patch_loader.hh  patch_mod_queue.hh  patch_player.hh  patch_playloader.hh  patch_playloader_proxy.hh  patch_storage.hh  patch_storage_proxy.hh  patchdisk.cc  patches_default.hh  patchfileio.cc  (+30 more)
firmware/stmprog/: nor.tsv
firmware/system/: abort_rescue.cc  abort_rescue.hh  alloc_diag.cc  alloc_diag.hh  alloc_rescue.cc  alloc_rescue.hh  alloc_watch.hh  cxx_terminate.cc  irq_ctrl.c  libc_stub.c  libc_stub.cc  libcpp_stub.cc  lock.cc  mlock.cc  mmu_ca35.c  mmu_ca7.c  new.cc  print_time.hh  reent_mm.cc  reent_mm.hh  safe_log.hh  sbrk.cc  startup_ca7.s  startup_stm32mp157cxx_cm4.s  startup_stm32mp23xx_a35.c  system_ca7.c  system_stm32mp1xx.h  time.cc  time.hh
firmware/tar/: exec
firmware/tests/: .clangd  DualAtenCore_tests.cc  Makefile  auto_map_tests.cc  autoload_plugins_tests.cc  block_resampler_tests.cc  cable_cache_tests.cc  calibration_data_tests.cc  catchup_snap_tests.cc  catchup_tests.cc  element_tests.cc  elf64_relocator_tests.cc  framebuffer_tests.cc  inter_core_comm_tests.cc  intercore_types_tests.cc  json_parse_test.cc  manifest_parse_tests.cc  mapping_lut_tests.cc  md5_test.cc  metamodule-sample-manifest.json  midi_14bit_cc_tests.cc  mm_json_parse_tests.cc  page_list_tests.cc  param_watch_tests.cc  params_state_tests.cc  patch_list_helper_tests.cc  patch_listio_tests.cc  patch_player_jack_poly_tests.cc  patch_player_jack_tests.cc  patch_player_tests.cc  patch_tests.cc  poly_tests.cc  preload_plugins_tests.cc  ratio_tests.cc  reloc_tests.cc  resampler_tests.cc  roller_tests.cc  rot_matrix_tests.cc  rotocontrol_serializer_tests.cc  settings_parse_tests.cc  (+7 more)
firmware/vcv-ports/: register_vcv_ports.cc
firmware/vcv_plugin/: CMakeLists.txt
firmware/vcv_ports/: .gitignore  CMakeLists.txt  Makefile  all-syms  all-undef-syms  brands.cmake  convert_plugins.hh  internal_plugin_manager.hh  internal_plugins.hh  load_internal_plugins.hh
headless/: CMakeLists.txt  CMakePresets.json  Makefile  README.md  ext-plugins.cmake
headless/src/: audio_wrapper.hh  frame.hh  host_file_io.hh  main.cc  settings.hh  stream_conf.hh
headless/stubs/: debug.hh  random.cpp
screen_simulator/: Cargo.toml  build.rs
screen_simulator/mms/: .clangd  lvgl_driver.hh  mms.cc
screen_simulator/src/: main.rs
shared/CoreModules/: .clangd  8stepCore.cpp  8stepCore.h  ADEnvCore.cc  AttCore.cc  Atvert2Core.cc  Atvert2Core.cpp  Atvert2Core.hpp  BPFCore.cc  BPFCore.hpp  BPLRCore.cpp  BPLRCore.hpp  BuffMultCore.cc  BuffMultCore.hpp  CLKDCore.cc  CLKMCore.cc  CMakeLists.txt  ComplexEGCore.hpp  CoreHelper.hh  CoreProcessor.hh  DEVCore.cc  DJCore.cpp  DJCore.hpp  DetuneCore.cpp  DetuneCore.hpp  DjembeCore.cc  DjembeCore.hpp  DrumCore.cpp  DrumCore.hpp  EnOscCore.cc  EnOscCore.cpp  EnOscCore.hpp  FLWCore.cpp  FLWCore.hpp  FMCore.hpp  FadeDelayCore.cc  FollowCore.cpp  FollowCore.hpp  FreeverbCore.cc  GRevCore.cc  (+179 more)
shared/base64/: .gitignore  CMakeLists.txt  LICENSE  README.md  base64.h
shared/gen_minblep/: CMakeLists.txt  (+4 more)
simulator/: Building.md  CMakeLists.txt  CMakePresets.json  Makefile  README-headless.md  README-screenshots.md  README.md  Setup.md  ext-plugins.cmake  localize-ext-plugin.cmake  lv_conf.h  plugin.cmake  vcpkg.json
(+6383 files in other folders)
