[package]
name = "screen_sim"
version = "0.1.0"
authors = ["Dan Green <danngreen1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.3"
libc = "0.2.0"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3.0"
